--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "axios": "^0.27.2",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-hook-form": "^7.38.0",
+    "react-native": "0.69.6",
+    "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "^2.7.1",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-material-cards": "^1.0.16",
+    "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-virtualized-view": "^1.0.0",
+    "react-navigation-stack": "^2.10.4",
+    "reactotron-react-native": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
